Disabled fixed header on mobile.

--- a/documentation/public/stylesheet/main.css
+++ b/documentation/public/stylesheet/main.css
@@ -58,6 +58,16 @@ p code {
 	z-index: 100;
 }
 
+@media all and (max-width: 600px) {
+	#title h1 {
+		position: inherit;
+	}
+
+	body > .container {
+		padding-top: 0;
+	}
+}
+
 #title h1 {
 	float: left;
 	margin: 12px 0 0 0;
